# bili-jeans

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: test.yml  test_coverage.yml
bili_jeans/: app.py  cli.py
bili_jeans/cli/: __init__.py  __main__.py  app.py  download.py
bili_jeans/core/: constants.py  download.py  factory.py  log.py  muxer.py  pages.py  proxy.py  schemes.py  utils.py
bili_jeans/core/download/: __init__.py  download_task.py  ugc_audio.py  ugc_cover.py  ugc_danmaku.py  ugc_subtitle.py  ugc_video.py
bili_jeans/core/schemes/: __init__.py  app.py  base.py  factory.py  subtitle.py  ugc_play.py  ugc_player.py  ugc_view.py
bili_jeans/core/utils/: __init__.py  quality.py  subtitle.py
tests/: utils.py
tests/data/: ugc_play_BV1Et4y1r7Eu.json  ugc_play_BV1Ys421M7YM.json  ugc_player_BV1Et4y1r7Eu.json  ugc_view_BV13L4y1K7th.json  ugc_view_BV13ht2ejE1S.json  ugc_view_BV1tN4y1F79k.json
tests/data/ugc_play/: ugc_play_BV13L4y1K7th.json  ugc_play_BV13ht2ejE1S.json  ugc_play_BV1X54y1C74U.json
tests/data/ugc_player/: ugc_player_BV13L4y1K7th.json  ugc_player_BV13ht2ejE1S.json  ugc_player_BV1X54y1C74U.json  ugc_player_BV1Ys421M7YM.json
tests/data/ugc_view/: ugc_view_BV1Et4y1r7Eu.json  ugc_view_BV1UnExisted.json  ugc_view_BV1X54y1C74U.json  ugc_view_BV1Ys421M7YM.json  ugc_view_BV1wE4m1R7cu.json
tests/unittest/: test_app.py  test_cli.py
tests/unittest/cli/: test_app.py  test_download.py
tests/unittest/core/: test_constants.py  test_download.py  test_factory.py  test_pages.py  test_proxy.py
tests/unittest/core/download/: test_download_task.py  test_ugc_audio.py  test_ugc_cover.py  test_ugc_danmaku.py  test_ugc_subtitle.py  test_ugc_video.py
tests/unittest/core/proxy/: test_get_ugc_play.py  test_get_ugc_view.py
(+1 files in other folders)
