[tool.poetry]
name = "bili-jeans"
version = "0.0.1"
description = "Download available resources from Bilibili"
authors = ["Chaojie Yan <ushareroses@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiofile = "3.8.8"
aiohttp = "3.11.11"
pydantic = "2.10.5"

[tool.poetry.group.dev.dependencies]
flake8 = "7.1.1"
ipython = "7.34.0"
mypy = "1.14.1"
pytest = "8.3.4"
pytest-asyncio = "0.25.2"
pytest-cov = "6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
